tests/miniJava/neg/004271_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { java public int [] java ( ) { return 0 ; } }
